--- a/css/simple copy.css
+++ b/css/simple copy.css
@@ -1,15 +1,15 @@
 /* Global variables. */
 :root {
     /* Set sans-serif & mono fonts */
-    --sans-font: -apple-system, Roboto, BlinkMacSystemFont, "Avenir Next", Avenir,
+    --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir,
         "Nimbus Sans L", Roboto, "Noto Sans", "Segoe UI", Arial, Helvetica,
         "Helvetica Neue", sans-serif;
     --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 
     /* Default (light) theme */
-    --bg: #202123;
+    --bg: #fff;
     --accent-bg: #f5f7ff;
-    --text: #bbbbbb;
+    --text: #212121;
     --text-light: #585858;
     --border: #898EA4;
     --accent: #0d47a1;
@@ -67,12 +67,11 @@ html {
 body {
     color: var(--text);
     background-color: var(--bg);
-    font-size: 1.0rem;
+    font-size: 1.15rem;
     line-height: 1.5;
     display: grid;
     grid-template-columns: 1fr min(45rem, 90%) 1fr;
     margin: 0;
-    padding: 3%;
 }
 
 body>* {
